--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
             {% endif %}
         }
     </style>
+    {% block script %}{% endblock %}
 </head>
 <body>
     <div class="corner-heart">💗</div>
