--- a/templates/base.html
+++ b/templates/base.html
@@ -2,47 +2,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Главная{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='lab1/lab1.css') }}">
-    <link rel="icon" href="{{ url_for('static', filename='lab1/favicon.ico') }}">
-    <style>
-        body {
-            {% if request.cookies.get('color') %}
-            color: {{ request.cookies.get('color') }};
-            {% endif %}
-            {% if request.cookies.get('bg_color') %}
-            background-color: {{ request.cookies.get('bg_color') }};
-            {% endif %}
-            {% if request.cookies.get('font_size') %}
-            font-size: {{ request.cookies.get('font_size') }};
-            {% endif %}
-            {% if request.cookies.get('font_family') %}
-            font-family: {{ request.cookies.get('font_family') }};
-            {% endif %}
-        }
-    </style>
-    {% block script %}{% endblock %}
+    <title>{% block title %}Лабы{% endblock %}</title>
 </head>
 <body>
-    <div class="corner-heart">💗</div>
-    <div class="corner-heart">💖</div>
-    <div class="corner-heart">💝</div>
-    <div class="corner-heart">💞</div>
-    
-    <div class="container">
-        <header>
-            <h1>{% block lab %}{% endblock %}</h1>
-        </header>
-        
-        <main>
-            {% block main %}{% endblock %}
-        </main>
-        
-        <footer>
-            <hr>
-            <p>Журавлева Виктория, ФБИ-34, 3 курс, 2025</p>
-        </footer>
-    </div>
+    <header>
+        <h1>{{ student.university }}</h1>
+    </header>
+
+    <main>
+        {% block content %}{% endblock %}
+    </main>
 </body>
 </html>
